26 July 2006: Wouter
	- Updated the requirements with comments from Olaf.
	- README discourages use of experimental nsec3 rr a bit more.
	- typo in DNAME code, used original qname instead of CNAME
	  adapted qname variable.
	- added IPSECKEY RR type, RFC 4025.
	- tpkg test with sample ipseckey rrs.
	- wireformat for IPSECKEY depends on the value of a rdata atom, added
	  WF_IPSECGATEWAY to handle that.
	- DHCID type, data is encoded in one binary/b64 blob.

25 July 2006: Wouter
	- max number of tries for nsd-notify is 15, so that the
	  total time for sending is about 75 seconds.
	- forward port of fixes for bug 105 and 135 in nsdc.
	  forward port of test for bug 105.
	- fixed nasty bug with configure --prefix=<...> where config.h
	  was wrong. Now double evaluate the shell expansion on the defines.

5 July 2006: Wouter
	- helped in README with gnu make; need to make clean
	  so that botched attempts by make to create the lexer files
	  do not stay around.
	- removed %zd, replaced by casts to int.
	- updated REQUIREMENTS file, the sections on RR types, on what
	  algorithm NSD follows and on which RFCs are supported are updated.

3 July 2006: Wouter
	- 'make depend' target in makefile. (updates both Makefile.in
	  and Makefile, so it works for users and for svn).
	- doc minor update.

2 July 2006: Wouter
	- TESTPLAN, README, bugzilla-bugs docs updated.
	- NSD for BIND users update.

29 June 2006: Wouter
	- removed --zonesfile nsd.zones configure option.
	- doc/README updated for 3.0.
	- doc update. NSD_FOR_BIND_USERS document.
	- moved from -Ds to the config.h header, cleaner compilation output.
	- use autoconfs built in large file support enabler.

28 June 2006: Wouter
	- nsdc neater, checks for BLOCKED ips more strictly.
	- nsd -d also disables xfrd forking, and thus all reloads
	  and secondary zone treatment. Stated so in manual page.
	- fixup, apart from ip4 need to allow ip6 in example.conf
	  line showing how to allow access for everyone to axfr.
