@@ -1,3 +1,6 @@
+27 July 2006: Wouter
+	- fixup desc of tsig xfer test, remove debug from xfr_huge.
+
 26 July 2006: Wouter
 	- Updated the requirements with comments from Olaf.
 	- README discourages use of experimental nsec3 rr a bit more.
